Give enrichment real state, and a sweep that runs without being asked
Enrichment had no recovery. The pool discards work when its queue fills, which
is the right trade for bulk crawling, but the thing that was supposed to pick
those jobs up — the sweep — had exactly one trigger: a CLI runner someone had to
remember to invoke. Every other periodic job in the app is scheduled; the one
that repairs the others was not. Unrun, a dropped posting stays unenriched
forever: no summary, no tiered skills, no contact, and nothing anywhere saying
so. It runs hourly now, offset from the crawler so it is not competing with the
ingest it cleans up after.

"Done" was also only a guess. findUnenriched asked for ai_summary IS NULL, which
got all three cases wrong: a job whose enrichment ran but produced no summary was
never marked done and came back on every pass, forever, spending quota each time;
a job whose summary landed but whose skills, contact and deadline all failed
counted as finished and was never revisited; and nothing counted attempts, so a
posting that can never succeed was retried indefinitely with no way to see it.

Jobs now carry enrichment_status, attempts, last attempt and last error, written
by both the crawler's async path and the sweep. A posting is given up on after
four failures and left alone for six hours between tries. The columns are
entity-only, following the URL-health fields already there: this is processing
metadata, not part of the posting.

Verified against a real Postgres 16, not just compiled: the migration applies on
top of the full chain, existing rows with a summary backfill to ENRICHED, and the
queue returns never-tried first, then tried-longest-ago, correctly skipping the
recently-tried, the given-up-on and the already-enriched.